src/test/deca/codegen/valid/opArithInt.ass
; Main Program
	TSTO #2
	BOV pile_pleine
	ADDSP #2
; start main program
; Main program
; Beginning of main instructions:
	LOAD #1, R3
	STORE R3, 1(GB)
	LOAD #2, R3
	STORE R3, 2(GB)
	LOAD #3, R1
	LOAD 1(GB), R3
	MUL R3, R1
	BOV overflow_arith
	LOAD 2(GB), R3
	LOAD #2, R4
	CMP #0, R4
	BEQ division_par_zero
	QUO R4, R3
	BOV overflow_arith
	SUB R3, R1
	BOV overflow_arith
	STORE R1, 1(GB)
	HALT
; Message d'erreurs
pile_pleine:
	WSTR "Erreur : debordement de pile"
	WNL
	ERROR
division_par_zero:
	WSTR "Erreur : divion entiere par zero"
	WNL
	ERROR
overflow_arith:
	WSTR "Erreur : overflow_arithmetique"
	WNL
	ERROR
; end main program
