src/test/deca/codegen/invalid/div_zero.ass
; Main Program
	TSTO #2
	BOV pile_pleine
	ADDSP #2
; start main program
; Main program
; Beginning of main instructions:
	LOAD #1, R3
	STORE R3, 1(GB)
	LOAD #0, R3
	STORE R3, 2(GB)
	LOAD 1(GB), R1
	LOAD 2(GB), R3
	CMP #0, R3
	BEQ division_par_zero
	QUO R3, R1
	BOV overflow_arith
	WINT
	HALT
; Message d'erreurs
pile_pleine:
	WSTR "Erreur : debordement de pile"
	WNL
	ERROR
division_par_zero:
	WSTR "Erreur : divion entiere par zero"
	WNL
	ERROR
overflow_arith:
	WSTR "Erreur : overflow_arithmetique"
	WNL
	ERROR
; end main program
